# ressmith

./: .gitignore  ARCHITECTURE_SUMMARY.md  CONTRIBUTING.md  DELETE_LIST.md  DEPRECATION_NOTICE.md  LIBRARY_REVIEW.md  MERGE_MIGRATION.md  MIGRATION_PLAN.md  MIGRATION_STATUS.md  MIGRATION_UV.md  ML_SAFETY_AUDIT.md  PDYCA_MIGRATION_ANALYSIS.md  PRODUCTION_AUDIT.md  PROD_HARDENING_CHECKLIST.md  README.md  RELEASE.md  RELEASE_NOTES.md  TECH_DEBT_REGISTER.md  mypi.ini  pyproject.toml
decline_curve_shim/: README.md  pyproject.toml
decline_curve_shim/decline_curve/: __init__.py
docs/: advanced_workflows.md  api.rst  architecture.md  best_practices.md  conf.py  design_decisions.md  engineer_capability_map.md  getting_started.md  index.md  index.rst  model_selection_guide.md  requirements.txt
examples/: README.md  basic_economics.py  basic_fit_forecast.py  basic_segmented.py  demo_advanced_workflows.py  demo_complete_field_analysis.py  demo_ensemble_probabilistic.py  demo_portfolio_analysis.py  demo_single_well_complete.py  integrated_studies.py  integration_timesmith.py
ressmith/: __init__.py  __main__.py  dca.py
scripts/: smoke.py  smoke_all.sh
tests/: test_integrated_reservoir_workflows.py  test_integration_timesmith.py  test_leakage_prevention.py  test_ml_forecast_port.py  test_numerical_stability_comprehensive.py  test_objects_validate.py  test_primitives_advanced_models.py  test_primitives_decline_edge_cases.py  test_primitives_diagnostics.py  test_primitives_economics.py  test_primitives_ensemble.py  test_primitives_segmented.py  test_primitives_variants.py  (+9 more)
(+111 files in other folders)
