[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decline-curve"
version = "0.3.0"
description = "Decline curve analysis - compatibility shim. Use ressmith for new development."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
dependencies = [
    "ressmith>=0.2.2",
]

[project.urls]
Homepage = "https://github.com/kylejones200/ressmith"
Documentation = "https://ressmith.readthedocs.io/"

[tool.setuptools.packages.find]
include = ["decline_curve*"]
